[project]
name = "src"
version = "0.0.1"
description = "An MLOps project for productionizing models related to insurance sectors."
authors = [{name = "AOS2685", email = "singhamanonkar@gmail.com"}]

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}